[package]
name = "omaveil"
version = "0.1.0"
edition = "2021"
authors = ["somtooo"]
description = "An Omarchy-native window minimizer for Hyprland, using Walker as the restore picker"

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build]
rustflags = ["-C", "target-cpu=native"]
